--- a/package.json
+++ b/package.json
@@ -9,5 +9,17 @@
     "mongoose": "^8.18.0",
     "multer": "^2.0.2",
     "nodemon": "^3.1.10"
-  }
+  },
+  "name": "testbook-backend",
+  "version": "1.0.0",
+  "description": "test book quiz backend codebase",
+  "main": "server.js",
+  "devDependencies": {},
+  "scripts": {
+    "dev":"nodemon server.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
+  },
+  "author": "mindcoders",
+  "license": "ISC"
 }
